<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- char attributes -->
    <string name="name">Name</string>
    <string name="char_class">Class</string>
    <string name="level">Level</string>
    <string name="race">Race</string>
    <string name="tendency">Tendency</string>
    <string name="divinity">Divinity</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="player">Player</string>
    <string name="dungeon_master">Dungeon Master</string>
    <string name="campaign">Campaign</string>
    <string name="creation_date">Creation Date</string>
    <string name="base_hp">Base HP</string>
    <string name="item">Item</string>
    <string name="slot">Slot</string>
    <string name="trait">Trait</string>
    <string name="skill">Skill</string>
    <string name="skill_key_ability">Key ability</string>
    <string name="skill_armor_penalty">Armor penalty</string>
    <string name="trained_skills">Trained Skills</string>
    <string name="crit_range">Crit Range</string>
    <string name="crit_mult">Crit Mult</string>
    <string name="unnarmed_strike">Unnarmed Strike</string>

    <!-- modifier targets -->
    <string name="ac">AC</string>
    <string name="hp">HP</string>
    <string name="hp_temp">Temp HP</string>
    <string name="str">Str</string>
    <string name="dex">Dex</string>
    <string name="con">Con</string>
    <string name="int_ability">Int</string>
    <string name="wis">Wis</string>
    <string name="cha">Cha</string>
    <string name="fort">Fortitude</string>
    <string name="fort_short">Fort</string>
    <string name="refl">Reflex</string>
    <string name="refl_short">Refl</string>
    <string name="will">Will</string>
    <string name="will_short">Will</string>
    <string name="conceal">Concealment</string>
    <string name="conceal_short">Conceal</string>
    <string name="sr">SR</string>
    <string name="dr">DR</string>
    <string name="dr_type">DR Type</string>
    <string name="init">Initiative</string>
    <string name="init_short">Init</string>
    <string name="speed">Speed</string>
    <string name="speed_short">Speed</string>
    <string name="speed_mult">×Speed</string>
    <string name="atk">Attack Roll</string>
    <string name="atk_short">Attack</string>
    <string name="damage">Damage</string>
    <string name="damage_mult">×Damage</string>
    <string name="critical">Critical</string>
    <string name="size">Size</string>
    <string name="saves">Saves</string>
    <string name="max_dex">Dex Limit</string>
    <string name="max_dexterity">Maximum Dexterity</string>
    <string name="immune">Immune</string>

    <!-- modifier types -->
    <string name="enhance">Enhancement</string>
    <string name="morale">Morale</string>
    <string name="compete">Competence</string>
    <string name="circums">Circumstance</string>
    <string name="armor">Armor</string>
    <string name="shield">Shield</string>
    <string name="nat_armor">Natural Armor</string>
    <string name="defl">Deflection</string>
    <string name="dodge">Dodge</string>
    <string name="racial">Racial</string>
    <string name="luck">Luck</string>
    <string name="alchem">Alchemical</string>
    <string name="insight">Insight</string>
    <string name="resist">Resistance</string>
    <string name="inherent">Inherent</string>
    <string name="profane">Profane</string>
    <string name="sacred">Sacred</string>

    <!-- conditionals -->
    <string name="when">when</string>
    <string name="using">using</string>
    <string name="against">against</string>
    <string name="related_to">related to</string>
    <string name="melee">melee</string>
    <string name="ranged">ranged</string>
    <string name="thrown_weapons">thrown weapons</string>
    <string name="sling">sling</string>
    <string name="not_moving">not moving</string>
    <string name="poison">poison</string>
    <string name="disease">disease</string>
    <string name="fear">fear</string>
    <string name="sleep">sleep</string>
    <string name="aging">aging</string>
    <string name="spell">spell</string>
    <string name="enchantment">enchantment</string>
    <string name="illusion">illusion</string>
    <string name="burst">burst</string>
    <string name="aberration">aberration</string>
    <string name="animal">animal</string>
    <string name="construct">construct</string>
    <string name="dragon">dragon</string>
    <string name="elemental">elemental</string>
    <string name="fey">fey</string>
    <string name="giant">giant</string>
    <string name="humanoid">humanoid</string>
    <string name="magical_beast">magical beast</string>
    <string name="monstrous_humanoid">monstrous humanoid</string>
    <string name="ooze">ooze</string>
    <string name="outsider">outsider</string>
    <string name="plant">plant</string>
    <string name="undead">undead</string>
    <string name="vermin">vermin</string>
    <string name="kobold">kobold</string>
    <string name="goblinoid">goblinoid</string>
    <string name="goblin">goblin</string>
    <string name="orc">orc</string>
    <string name="stone">stone</string>
    <string name="metal">metal</string>

    <!-- equip slots -->
    <string name="held">Held</string>
    <string name="main_hand">Main hand</string>
    <string name="offhand">Offhand</string>
    <string name="head">Head</string>
    <string name="eyes">Eyes</string>
    <string name="neck">Neck</string>
    <string name="torso">Torso</string>
    <string name="body">Body</string>
    <string name="waist">Waist</string>
    <string name="shoulders">Shoulders</string>
    <string name="arms">Arms</string>
    <string name="hands">Hands</string>
    <string name="finger">Finger</string>
    <string name="finger1">Finger 1</string>
    <string name="finger2">Finger 2</string>
    <string name="feet">Feet</string>

    <!-- UI -->
    <string name="app_name">D&amp;D Sheet</string>
    <string name="sheet">Sheet</string>
    <string name="create">Create</string>
    <string name="select">Select</string>
    <string name="remove">Remove</string>
    <string name="export">Export</string>
    <string name="edit">Edit</string>
    <string name="chars">Characters</string>
    <string name="char_remove">Remove Character</string>
    <string name="equip">Equipment</string>
    <string name="attacks">Attacks</string>
    <string name="attack_edit">Edit Attack</string>
    <string name="bonuses">Bonuses</string>
    <string name="modlink_edit">Edit Modifier Links</string>
    <string name="class_select">Select Class</string>
    <string name="class_remove">Remove Class</string>
    <string name="class_add">Add Class</string>
    <string name="class_edit">Edit Class</string>
    <string name="class_edit_atk_prog">Attack Progression</string>
    <string name="multiclass_more">Add class</string>
    <string name="multiclass_less">Remove last class</string>
    <string name="item_edit">Edit Item</string>
    <string name="item_select">Select Item</string>
    <string name="item_remove">Remove Item</string>
    <string name="basic">Basic</string>
    <string name="personality">Personality &amp; Campaign</string>
    <string name="value">Value</string>
    <string name="source">Source</string>
    <string name="bonus">Bonus</string>
    <string name="multiplier">Multiplier</string>
    <string name="summary_find_temp">Find Effect</string>
    <string name="temp">Temporary Effect</string>
    <string name="temps_select">Select Effect</string>
    <string name="temps_edit">Edit Effect</string>
    <string name="temp_remove">Remove Effect</string>
    <string name="progression_good">Good</string>
    <string name="progression_average">Average</string>
    <string name="progression_poor">Poor</string>
    <string name="tendency_good">Good</string>
    <string name="tendency_evil">Evil</string>
    <string name="tendency_neutral">Neutral</string>
    <string name="tendency_loyal">Loyal</string>
    <string name="tendency_chaotic">Chaotic</string>
    <string name="gender_m">M</string>
    <string name="gender_f">F</string>
    <string name="skill_select">Select Skill</string>
    <string name="skill_edit">Edit Skill</string>
    <string name="confirm">Confirm</string>
    <string name="skills">Skills</string>
    <string name="traits">Traits</string>
    <string name="trait_select">Select Trait</string>
    <string name="trait_edit">Edit Trait</string>
    <string name="search">Search</string>
    <string name="feats">Feats</string>
    <string name="add">Add</string>
    <string name="race_edit">Edit Race</string>
    <string name="race_select">Select Race</string>
    <string name="temps">Temporary Effects</string>
    <string name="conditionals">Conditionals</string>
    <string name="target">Target</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
    <string name="ord_1">1st</string>
    <string name="ord_2">2nd</string>
    <string name="ord_3">3rd</string>
    <string name="ord_4">4th</string>
    <string name="ord_5">5th</string>
    <string name="ord_6">6th</string>
    <string name="ord_7">7th</string>
    <string name="ord_8">8th</string>
    <string name="ord_9">9th</string>
    <string name="ord_10">10th</string>
    <string name="ord">#</string>
    <string name="penalty">Penalty</string>
    <string name="penalties">Penalties</string>
    <string name="weapon">Weapon</string>
    <string name="protective">Protective</string>
    <string name="empty"></string>
    <string name="hit_points">Hit Points</string>
    <string name="spell_resistance">Spell Resistance</string>
    <string name="damage_reduction">Damage Reduction</string>
    <string name="armor_class">Armor Class</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="save">Save</string>
    <string name="saved_to">Saved to</string>
    <string name="failed_saving">Falied when saving to file.</string>
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="rulebooks">Rule books</string>
    <string name="loading">Importing rules…</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="editions">Editions</string>
    <string name="races">Races</string>
    <string name="race_traits">Race traits</string>
    <string name="classes">Classes</string>
    <string name="items">Items</string>
    <string name="effects">Effects</string>
    <string name="class_traits">Class traits</string>
    <string name="hp_temp_long">Temporary HP</string>
    <string name="dmg_nonlethal">Nonlethal damage</string>
    <string name="dmg_lethal">Lethal damage</string>

</resources>