<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:text="@string/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>

    <TextView
            android:text="@string/slot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Spinner
            android:id="@+id/slot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/itemTypeLabel"
            android:text="@string/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Spinner
            android:id="@+id/itemType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/weapon_fields">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/damage"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/crit_range"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/crit_mult"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/damage"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/crit_range"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            <EditText
                    android:id="@+id/crit_mult"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

        </LinearLayout>

    </LinearLayout>

    <include
            layout="@layout/effects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
