<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:paddingTop="@dimen/standard_padding"
        android:paddingRight="@dimen/standard_padding"
        android:paddingLeft="@dimen/standard_padding"
        android:paddingBottom="@dimen/double_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/title"
            android:gravity="center"
            android:paddingBottom="@dimen/standard_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <TextView
                android:text="@string/value"
                android:gravity="right"
                android:paddingRight="@dimen/standard_padding"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/source"
                android:paddingLeft="@dimen/standard_padding"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/base"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <TextView
            android:id="@+id/raceTitle"
            android:text="@string/race"
            android:paddingTop="@dimen/standard_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/race"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <TextView
            android:id="@+id/classTitle"
            android:text="@string/char_class"
            android:paddingTop="@dimen/standard_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/clazz"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <TextView
            android:id="@+id/equipTitle"
            android:text="@string/equip"
            android:paddingTop="@dimen/standard_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/equip"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <TextView
            android:id="@+id/tempTitle"
            android:text="@string/temps"
            android:paddingTop="@dimen/standard_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/temp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>