<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/nameLabel"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:id="@+id/name"/>

        <TextView
                android:text="@string/race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                android:id="@+id/race"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:text="@string/char_class"
                    android:id="@+id/classLabel"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:id="@+id/lvlLabel"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/classList"
                android:orientation="vertical"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/base_hp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/hp"/>

        <include
                layout="@layout/edit_char_basic_attributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>
