<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:text="@string/race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>

    <include
        layout="@layout/edit_char_basic_attributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
            android:text="@string/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Spinner
            android:id="@+id/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

</LinearLayout>
